# CppPlug

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
logo/: CppPlug.ai
src/: CppPlugDefs.h  DynamicLibrary.cpp  DynamicLibrary.h  IModule.h  ManagedModule.cpp  ManagedModule.h  ManagedPlugin.cpp  ManagedPlugin.h  Module.cpp  Module.h  ModuleTools.h  ModuleTools.hpp  ModulesManager.cpp  ModulesManager.h  Path.cpp  Path.h  Plugin.h  UnmanagedModule.cpp  UnmanagedModule.h  UnmanagedPlugin.cpp  UnmanagedPlugin.h
src/dotNet/: CMakeLists.txt
templates/c/: c_module.c  c_module.h  c_plugin.h
templates/cpp/: cpp_module.cpp  cpp_module.hpp  cpp_plugin.hpp
templates/csharp/: csharp_module.cs  csharp_plugin.cs
tests/AdvancedCalculator/: CMakeLists.txt  package.json
tests/AdvancedCalculator/src/: AdvancedCalculator.cpp  AdvancedCalculator.h  Multiply.h
tests/Calculator/: CMakeLists.txt
tests/Calculator/src/: main.cpp
tests/ManagedCalculator/: CMakeLists.txt  CppPlug_d.cs  ManagedCalculator.cs  ManagedCalculator.csproj  ManagedCalculator.csproj.template  Std.cs  Sub.cs  package.json
tests/ManagedCalculator/Properties/: AssemblyInfo.cs
tests/StandardCalculator/: CMakeLists.txt  package.json
tests/StandardCalculator/src/: StandardCalculator.cpp  StandardCalculator.h  Sum.h
